<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buscaremedio.com.br.buscaremedio.Sobre"
    android:background="@color/bb_darkBackgroundColor"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/desenvolvidopor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="14sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contato"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/emailcontato"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="34dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/emailcontato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bruno.barretta@fatec.sp.gov.br"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:layout_marginStart="23dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="11dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintLeft_toRightOf="@+id/imageView8"
        android:layout_marginLeft="23dp" />

    <TextView
        android:id="@+id/direitosreservados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direitos"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="14sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:layout_marginStart="27dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="108dp"
        app:layout_constraintTop_toBottomOf="@+id/desenvolvidopor"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="106dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="27dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="156dp"
        android:layout_height="142dp"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>



